test/expected/explain_al3_c.out
explain _Alignas(3) char c
        ^
9: error: "3": alignment must be a power of 2
